--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
   background-color: #fff;
 }
 
+.sitenav-lists {
+list-style: none;
+}
+
 .sitenav-link {
   font-weight: 500;
   font-size: 13px;
@@ -122,7 +126,22 @@ object-fit: cover;
   background-color: #f8f8f8;
 }
 
+.site-footer ul {
+  list-style: none;
+}
+
 .footer-line {
 height: 2px;
 background-color: rgba(37, 36, 32, 0.5);
 }
+
+.site-footer ul a {
+  font-style: 16px;
+  line-height: 19px;
+  text-decoration: none;
+  color: #252420;
+}
+
+.site-footer-links {
+  width: 224px;
+  }
