--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+body {
+  font-style: 16px;
+  line-height: 1.5;
+  font-family: "Roboto", "Arial", sans-serif;
+  letter-spacing: 0.5px;
+}
+
 .site-header {
   background-color: #fff;
 }
@@ -19,7 +26,6 @@ list-style: none;
   font-weight: 700;
   font-size: 13px;
   line-height: 15px;
-  letter-spacing: 0.5px;
   background-color: #ff7500;
   color: #fff;
 }
@@ -40,17 +46,14 @@ list-style: none;
 }
 
 .hero-heading {
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   font-weight: 700;
   font-size: 40px;
   line-height: 120%;
-  letter-spacing: 0.5px;
 }
 
 .hero-text {
-  font-weight: 400;
-font-size: 16px;
-line-height: 150%;
-letter-spacing: 0.5px;
+font-weight: 400;
 }
 
 .hero-img {
@@ -63,10 +66,10 @@ letter-spacing: 0.5px;
 }
 
 .features-heading {
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   width: 440px;
   font-size: 72px;
   line-height: 1.2;
-  letter-spacing: 0.5px;
 }
 
 .feature {
@@ -80,17 +83,14 @@ background-color: rgba(255, 117, 0, 0.2);
 }
 
 .feature-title {
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   font-weight: 700;
   font-size: 24px;
   line-height: 120%;
-  letter-spacing: 0.5px;
 }
 
 .feature-info {
   font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.5px;
 }
 
 .promo {
@@ -103,17 +103,14 @@ background-color: rgba(255, 117, 0, 0.2);
 }
 
 .sale-heading {
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   font-weight: 700;
   font-size: 40px;
   line-height: 120%;
-  letter-spacing: 0.5px;
 }
 
 .sale-info {
   font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.5px;
 }
 
 .promo-highlight {
@@ -140,7 +137,7 @@ background-color: rgba(37, 36, 32, 0.5);
 }
 
 .site-footer ul a {
-  font-style: 16px;
+  font-weight: 400;
   line-height: 19px;
   text-decoration: none;
   color: #252420;
