--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,30 @@ body {
   letter-spacing: 0.5px;
 }
 
+:focus {
+  outline-color: #ff7500;
+  outline-offset: 4px solid;
+  outline-width: 2px;
+  outline-style: dashed;
+}
+
 .site-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: #fff;
+}
+
+.logo-link {
+  transition: opacity 0.4s ease;
+}
+
+.logo-link:hover {
+  opacity: 0.8;
+}
+
+.logo-link:active {
+  opacity: 0.6;
 }
 
 /* Sitenav  */
@@ -35,13 +54,28 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   color: #000;
+  transition: color 0.4s ease;
+  opacity: 0.4s ease;
 }
+
+.sitenav-link:hover {
+  color: #FF7500;
+}
+
+.sitenav-link:active {
+  opacity: 0.6;
+}
+
 .main-link {
   font-weight: 700;
   font-size: 13px;
   line-height: 15px;
   background-color: #ff7500;
   color: #fff;
+  transition: opacity 0.4s ease;
+}
+.main-link:hover {
+  opacity: 0.8;
 }
 
 .hero {
@@ -155,6 +189,20 @@ body {
   justify-content: space-between;
 }
 
+.list-style-footer a {
+  color: #252420;
+ transition: color 0.4 ease;
+ opacity: 0.4 ease;
+}
+
+.list-style-footer a:hover {
+  color:#FF7500;
+}
+
+.list-style-footer a:active {
+  opacity: 0.6;
+}
+
 .list-style-footer {
   display: flex;
 }
@@ -178,6 +226,18 @@ body {
 .site-footer-links-parent {
   display: flex;
   justify-content: space-between;
+}
+
+.site-footer-links li a {
+  transition: color 0.4s ease;
+}
+
+.site-footer-links li a:hover {
+  color:#FF7500
+}
+
+.site-footer-links li a:active {
+  opacity: 0.6
 }
 
 .site-footer-links {
