--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,8 @@ body {
 }
 
 :focus {
-  outline-color: #ff7500;
-  outline-offset: 4px solid;
-  outline-width: 2px;
-  outline-style: dashed;
+outline: 2px dotted #ff7500;
+outline-offset: 3px;
 }
 
 .site-header {
@@ -17,6 +15,8 @@ body {
   align-items: center;
   justify-content: space-between;
   background-color: #fff;
+  border-top: 5px solid #ff7500;
+  padding: 16px 0 16px 0;
 }
 
 .logo-link {
@@ -40,9 +40,7 @@ body {
 
 .sitenav-lists {
   list-style: none;
-}
-
-.sitenav-lists {
+  padding: 0;
   display: flex;
 }
 
@@ -67,12 +65,15 @@ body {
 }
 
 .main-link {
+  display: inline-block;
   font-weight: 700;
   font-size: 13px;
   line-height: 15px;
   background-color: #ff7500;
   color: #fff;
   transition: opacity 0.4s ease;
+  padding: 12px 24px;
+  border-radius: 4px;
 }
 .main-link:hover {
   opacity: 0.8;
@@ -88,12 +89,13 @@ body {
 
 .hero-content {
   width: 390px;
+  padding: 80px 0 80px 0;
 }
 
 .orange-line {
   width: 80px;
   height: 3px;
-  background-color: #ff7500;
+  background-color: #ff7500; border: none;
 }
 
 .hero-heading {
@@ -110,6 +112,13 @@ body {
 .hero-img {
   width: 510px;
   height: 510px;
+  border-radius: 8px;
+}
+
+/* FEATURES */
+
+.features {
+  padding: 210px 0 210px 0;
 }
 
 .features-heading {
@@ -123,6 +132,7 @@ body {
   display: flex;
   justify-content: space-between;
   list-style: none;
+  padding: 0;
 }
 
 .feature {
@@ -132,7 +142,11 @@ body {
 .feature-icon-wrapper {
   width: 100px;
   height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgba(255, 117, 0, 0.2);
+  border-radius: 50%;
 }
 
 .feature-title {
@@ -150,6 +164,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 12px;
   background-color: #252420;
   color: #fff;
 }
@@ -177,10 +192,12 @@ body {
   width: 440px;
   height: 440px;
   object-fit: cover;
+  border-radius: 12px;
 }
 
 .site-footer {
   background-color: #f8f8f8;
+  padding: 56px 0 56px 0;
 }
 
 .site-footer-top {
@@ -205,6 +222,7 @@ body {
 
 .list-style-footer {
   display: flex;
+  padding: 0;
 }
 
 .site-footer ul {
@@ -213,6 +231,7 @@ body {
 
 .footer-line {
   height: 2px;
+  border:0;
   background-color: rgba(37, 36, 32, 0.5);
 }
 
@@ -221,6 +240,11 @@ body {
   line-height: 19px;
   text-decoration: none;
   color: #252420;
+}
+
+.site-footer-links {
+  width: 224px;
+  padding: 0;
 }
 
 .site-footer-links-parent {
@@ -238,8 +262,4 @@ body {
 
 .site-footer-links li a:active {
   opacity: 0.6
-}
-
-.site-footer-links {
-  width: 224px;
 }
