--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ outline-offset: 3px;
 }
 
 .logo-link {
+  display: block;
   transition: opacity 0.4s ease;
 }
 
@@ -42,6 +43,8 @@ outline-offset: 3px;
   list-style: none;
   padding: 0;
   display: flex;
+  margin: 0;
+  margin-right: 32px;
 }
 
 .sitenav-link {
@@ -54,6 +57,14 @@ outline-offset: 3px;
   color: #000;
   transition: color 0.4s ease;
   opacity: 0.4s ease;
+}
+
+.sitenav-item {
+  margin-right: 32px;
+}
+
+.sitenav-item:last-child {
+  margin-right:0;
 }
 
 .sitenav-link:hover {
@@ -95,10 +106,14 @@ outline-offset: 3px;
 .orange-line {
   width: 80px;
   height: 3px;
+  margin:0;
+  margin-bottom: 40px;
   background-color: #ff7500; border: none;
 }
 
 .hero-heading {
+  margin-top: 0;
+  margin-bottom: 24px;
   font-family: "Roboto Condensed", "Arial", sans-serif;
   font-weight: 700;
   font-size: 40px;
@@ -106,6 +121,8 @@ outline-offset: 3px;
 }
 
 .hero-text {
+  margin-top: 0;
+  margin-bottom: 32px;
   font-weight: 400;
 }
 
@@ -124,19 +141,26 @@ outline-offset: 3px;
 .features-heading {
   font-family: "Roboto Condensed", "Arial", sans-serif;
   width: 440px;
+  margin-top: 0;
+  margin-bottom: 72px;
   font-size: 72px;
   line-height: 1.2;
 }
 
 .list-style-feature {
   display: flex;
-  justify-content: space-between;
+  margin: 0;
   list-style: none;
   padding: 0;
 }
 
 .feature {
   width: 340px;
+  margin-right: 40px;
+}
+
+.feature:last-child {
+  margin-right: 0;
 }
 
 .feature-icon-wrapper {
@@ -174,6 +198,8 @@ outline-offset: 3px;
 }
 
 .sale-heading {
+  margin-top: 0;
+  margin-bottom: 24px;
   font-family: "Roboto Condensed", "Arial", sans-serif;
   font-weight: 700;
   font-size: 40px;
@@ -181,7 +207,17 @@ outline-offset: 3px;
 }
 
 .sale-info {
+  margin-top: 0;
+  margin-bottom: 12px;
   font-weight: 400;
+}
+
+.sale-info:last-child {
+  margin-bottom: 0;
+}
+
+.sale-info-wrapper {
+  margin-bottom: 24px;
 }
 
 .promo-highlight {
@@ -206,21 +242,34 @@ outline-offset: 3px;
   justify-content: space-between;
 }
 
-.list-style-footer a {
+.site-footer-socials a {
+  display: block;
   color: #252420;
  transition: color 0.4 ease;
  opacity: 0.4 ease;
 }
 
-.list-style-footer a:hover {
+.site-footer-socials svg {
+  display: block;
+}
+
+.site-footer-socials li {
+  margin-right: 16px;
+}
+
+.site-footer-socials li:last-child {
+  margin-right: 0;
+}
+
+.site-footer-socials a:hover {
   color:#FF7500;
 }
 
-.list-style-footer a:active {
+.site-footer-socials a:active {
   opacity: 0.6;
 }
 
-.list-style-footer {
+.site-footer-socials {
   display: flex;
   padding: 0;
 }
@@ -231,6 +280,8 @@ outline-offset: 3px;
 
 .footer-line {
   height: 2px;
+  margin-top: 40px;
+  margin-bottom: 64px;
   border:0;
   background-color: rgba(37, 36, 32, 0.5);
 }
@@ -245,6 +296,12 @@ outline-offset: 3px;
 .site-footer-links {
   width: 224px;
   padding: 0;
+  margin: 0;
+  margin-right: 68px;
+}
+
+.site-footer-links:last-child {
+  margin-right: 0;
 }
 
 .site-footer-links-parent {
