--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,38 @@
-* {
+/* GLOBAL  */
+  :root {
+  --accent-color: #ff7500;
+  --text-color: #252420;
+  --site-wh-color: #ffffff;
+  --heading-font: "Roboto Condensed", "Arial", sans-serif;
+  --text-font: "Roboto", "Arial", sans-serif;
+  }
+
+html {
   box-sizing: border-box;
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   padding: 0;
   margin: 0;
-  font-style: 16px;
+  font-size: 16px;
   line-height: 1.5;
-  font-family: "Roboto", "Arial", sans-serif;
+  font-family: var(--text-font);
   letter-spacing: 0.5px;
 }
 
 :focus {
-  outline: 2px dotted #ff7500;
+  outline: 2px dotted var(--accent-color);
   outline-offset: 3px;
 }
 /* CONTAINER  */
@@ -26,9 +46,9 @@ body {
 }
 
 .site-header {
-  background-color: #fff;
-  border-top: 5px solid #ff7500;
-  padding: 16px 0 16px 0;
+  background-color: var(--site-wh-color);
+  border-top: 5px solid var(--accent-color);
+  padding: 16px 16px;
 }
 
 .site-header-container {
@@ -86,7 +106,7 @@ body {
 }
 
 .sitenav-link:hover {
-  color: #FF7500;
+  color: var(--accent-color);
 }
 
 .sitenav-link:active {
@@ -95,12 +115,13 @@ body {
 
 .main-link {
   display: inline-block;
+  flex-grow: 1;
   font-weight: 700;
   font-size: 13px;
   line-height: 15px;
   text-decoration: none;
-  background-color: #ff7500;
-  color: #fff;
+  background-color: var(--accent-color);
+  color: var(--site-wh-color);
   transition: opacity 0.4s ease;
   padding: 12px 24px;
   border-radius: 4px;
@@ -110,8 +131,8 @@ body {
 }
 
 .hero {
-  background-color: #252420;
-  color: #fff;
+  background-color: var(--text-color);
+  color: var(--site-wh-color);
 }
 
 .hero-container {
@@ -130,13 +151,14 @@ body {
   height: 3px;
   margin:0;
   margin-bottom: 40px;
-  background-color: #ff7500; border: none;
+  background-color: var(--accent-color);
+  border: none;
 }
 
 .hero-heading {
   margin-top: 0;
   margin-bottom: 24px;
-  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-family: var(--heading-font);
   font-weight: 700;
   font-size: 40px;
   line-height: 120%;
@@ -162,7 +184,7 @@ body {
 }
 
 .features-heading {
-  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-family: var(--heading-font);
   width: 440px;
   margin-top: 0;
   margin-bottom: 72px;
@@ -198,7 +220,7 @@ body {
 }
 
 .feature-title {
-  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-family: var(--heading-font);
   margin-top: 0;
   margin-bottom: 12px;
   font-weight: 700;
@@ -222,8 +244,8 @@ body {
   align-items: center;
   padding: 64px;
   border-radius: 12px;
-  background-color: #252420;
-  color: #fff;
+  background-color: var(--text-color);
+  color: var(--site-wh-color);
 }
 
 .aksiya {
@@ -233,7 +255,7 @@ body {
 .sale-heading {
   margin-top: 0;
   margin-bottom: 24px;
-  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-family: var(--heading-font);
   font-weight: 700;
   font-size: 40px;
   line-height: 120%;
@@ -254,7 +276,7 @@ body {
 }
 
 .promo-highlight {
-  color:#ff7500
+  color: var(--accent-color);
 }
 
 .promo-img {
@@ -277,7 +299,7 @@ body {
 
 .site-footer-socials a {
   display: block;
-  color: #252420;
+  color: var(--text-color);
   transition: color 0.4 ease;
   opacity: 0.4 ease;
 }
@@ -295,7 +317,7 @@ body {
 }
 
 .site-footer-socials a:hover {
-  color:#FF7500;
+  color: var(--accent-color);
 }
 
 .site-footer-socials a:active {
@@ -323,7 +345,7 @@ body {
   font-weight: 400;
   line-height: 19px;
   text-decoration: none;
-  color: #252420;
+  color: var(--text-color);
 }
 
 .site-footer-links {
@@ -353,9 +375,9 @@ body {
 }
 
 .site-footer-links li a:hover {
-  color:#FF7500
+  color:var(--accent-color);
 }
 
 .site-footer-links li a:active {
-  opacity: 0.6
+  opacity: 0.6;
 }
