--- a/css/styles.css
+++ b/css/styles.css
@@ -328,45 +328,46 @@ body {
   padding: 56px 0 56px 0;
 }
 
-.site-footer-top {
+.site-footer__top {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.site-footer-socials a {
+.socials {
+  display: flex;
+  padding: 0;
+}
+
+.socials__item {
+  margin-right: 16px;
+}
+
+.socials__item:last-child {
+  margin-right: 0;
+}
+
+.socials__link {
   display: block;
   color: var(--text-color);
   transition: color 0.4 ease;
   opacity: 0.4 ease;
 }
 
-.site-footer-socials svg {
-  display: block;
-}
-
-.site-footer-socials li {
-  margin-right: 16px;
-}
-
-.site-footer-socials li:last-child {
-  margin-right: 0;
-}
-
-.site-footer-socials a:hover {
+.socials__link:hover {
   color: var(--accent-color);
 }
 
-.site-footer-socials a:active {
+.socials__link:active {
   opacity: 0.6;
 }
 
-.site-footer-socials {
-  display: flex;
-  padding: 0;
+.socials__icon {
+  display: block;
 }
 
-.site-footer ul {
+.site-footer__list {
+  padding: 0;
   list-style: none;
 }
 
@@ -385,36 +386,36 @@ body {
   color: var(--text-color);
 }
 
-.site-footer-links {
+.site-footer__links {
   width: 224px;
   padding: 0;
   margin: 0;
   margin-right: 68px;
 }
-.site-footer-links li {
+.site-footer__item {
   margin-bottom: 16px;
 }
 
-.site-footer-links li:last-child {
+.site-footer__item:last-child {
   margin-bottom: 0;
 }
 
-.site-footer-links:last-child {
+.site-footer__links:last-child {
   margin-right: 0;
 }
 
-.site-footer-links-parent {
+.site-footer__links-parent {
   display: flex;
 }
 
-.site-footer-links li a {
+.site-footer__link {
   transition: color 0.4s ease;
 }
 
-.site-footer-links li a:hover {
+.site-footer__link:hover {
   color:var(--accent-color);
 }
 
-.site-footer-links li a:active {
+.site-footer__link:active {
   opacity: 0.6;
 }
