--- a/css/styles.css
+++ b/css/styles.css
@@ -334,6 +334,10 @@ body {
   justify-content: space-between;
 }
 
+.site-footer__logo-link {
+  margin-right: 36px;
+}
+
 .socials {
   display: flex;
   padding: 0;
@@ -387,7 +391,8 @@ body {
 }
 
 .site-footer__links {
-  width: 224px;
+  max-width: 224px;
+  width: 100%;
   padding: 0;
   margin: 0;
   margin-right: 68px;
@@ -418,4 +423,76 @@ body {
 
 .site-footer__link:active {
   opacity: 0.6;
+}
+
+@media only screen and (max-width: 1140px) {
+  .site-footer__links {
+    width: 20.36%;
+    margin-right: 6.18%;
+  }
+}
+
+@media only screen and (max-width: 760px) {
+
+  .site-footer__links-parent {
+    flex-wrap: wrap;
+  }
+
+  .site-footer__links {
+    width: 30%;
+    margin-right: 5%;
+  }
+
+  .site-footer__links:last-child {
+    margin-right: 5%;
+  }
+
+  .site-footer__links:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .site-footer__links {
+    width: 46%;
+    margin-right: 8%;
+  }
+
+  .site-footer__links:nth-child(3n) {
+    margin-right: 8%;
+  }
+
+  .site-footer__links:nth-child(even) {
+    margin-right: 0;
+  }
+}
+
+@media only screen and (max-width: 530px) {
+  .site-footer {
+    padding-top: 36px;
+    padding-bottom: 36px;
+  }
+  .site-footer__top {
+    flex-direction: column;
+  }
+  .site-footer__logo-link {
+    margin-right: 0;
+    margin: 24px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+
+  .site-footer__links {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 0;
+    margin-bottom: 20px;
+  }
+
+  .site-footer__links:nth-child(3) {
+    margin: 0;
+  }
+
 }
