--- a/css/styles.css
+++ b/css/styles.css
@@ -426,13 +426,34 @@ body {
 }
 
 @media only screen and (max-width: 1140px) {
+  .feature {
+    width: 30%;
+    margin-right: 5%;
+  }
   .site-footer__links {
     width: 20.36%;
     margin-right: 6.18%;
   }
 }
 
+@media only screen and (max-width: 1000px) {
+  .features {
+    padding-top: 150px;
+    padding-bottom: 150px;
+  }
+}
+
 @media only screen and (max-width: 760px) {
+  .features {
+    padding-top: 90px;
+    padding-bottom: 90px;
+  }
+
+  .features-heading {
+    font-size: 54px;
+    margin-bottom: 54px;
+  }
+
 
   .site-footer__links-parent {
     flex-wrap: wrap;
@@ -453,6 +474,24 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+  .list-style-feature {
+    flex-wrap: wrap;
+  }
+
+  .feature {
+    width: 46%;
+    margin-right: 6%;
+    margin-bottom: 36px;
+  }
+
+  .feature:nth-child(2n) {
+    margin-right: 0;
+  }
+
+  .feature-icon-wrapper {
+    margin-bottom: 16px;
+  }
+
   .site-footer__links {
     width: 46%;
     margin-right: 8%;
@@ -468,6 +507,27 @@ body {
 }
 
 @media only screen and (max-width: 530px) {
+  .orange-line {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+  }
+
+  .features-heading {
+    width: 0%;
+    text-align: center;
+  }
+
+  .feature {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 45px;
+    text-align: center;
+  }
+
   .site-footer {
     padding-top: 36px;
     padding-bottom: 36px;
@@ -482,6 +542,15 @@ body {
 }
 
 @media only screen and (max-width: 400px) {
+  .features {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
+
+  .features-heading {
+    font-size: 36px;
+  }
+
 
   .site-footer__links {
     width: 100%;
