--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,35 @@
 /* GLOBAL  */
-  :root {
+:root {
   --accent-color: #ff7500;
   --text-color: #252420;
   --site-wh-color: #ffffff;
   --heading-font: "Roboto Condensed", "Arial", sans-serif;
   --text-font: "Roboto", "Arial", sans-serif;
-  }
+}
 
-  @font-face {
-    font-display: swap;
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 400;
-    src: url("../fonts/roboto-v30-latin-regular.woff2") format("woff2");
-  }
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/roboto-v30-latin-regular.woff2") format("woff2");
+}
 
-  @font-face {
-    font-display: swap;
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 500;
-    src: url("../fonts/roboto-v30-latin-500.woff2") format("woff2");
-  }
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/roboto-v30-latin-500.woff2") format("woff2");
+}
 
-  @font-face {
-    font-display: swap;
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 700;
-    src: url("../fonts/roboto-v30-latin-700.woff2") format("woff2");
-  }
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/roboto-v30-latin-700.woff2") format("woff2");
+}
 
 @font-face {
   font-display: swap;
@@ -165,6 +165,7 @@ body {
 .hero {
   background-color: var(--text-color);
   color: var(--site-wh-color);
+  padding: 80px 0 80px 0;
 }
 
 .hero-container {
@@ -175,7 +176,6 @@ body {
 
 .hero-content {
   width: 390px;
-  padding: 80px 0 80px 0;
 }
 
 .orange-line {
@@ -425,6 +425,14 @@ body {
   opacity: 0.6;
 }
 
+@media only screen and (max-width: 1200px) {
+  .hero-img {
+    position: static;
+    margin-right: 0;
+  }
+}
+
+
 @media only screen and (max-width: 1140px) {
   .feature {
     width: 30%;
@@ -437,13 +445,51 @@ body {
 }
 
 @media only screen and (max-width: 1000px) {
+  .hero-content {
+    flex-grow: 1;
+    margin-right: 60px;
+  }
+
+  .hero-heading {
+    font-size: 36px;
+  }
+
+  .hero-img {
+    width: 350px;
+    height: 350px;
+  }
+
   .features {
     padding-top: 150px;
     padding-bottom: 150px;
   }
 }
 
+@media only screen and (max-width: 800px) {
+  .hero-img {
+    width: 300px;
+    height: 300px;
+  }
+}
+
 @media only screen and (max-width: 760px) {
+  .hero-container {
+    flex-direction: column-reverse;
+  }
+
+  .hero-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-right: 0;
+    text-align: center;
+  }
+
+  .hero-img {
+    margin-right: 0;
+  }
+
   .features {
     padding-top: 90px;
     padding-bottom: 90px;
@@ -542,6 +588,12 @@ body {
 }
 
 @media only screen and (max-width: 400px) {
+  .hero-img {
+    box-shadow: none;
+    max-width: 100%;
+    height: auto;
+  }
+
   .features {
     padding-top: 70px;
     padding-bottom: 70px;
