--- a/css/styles.css
+++ b/css/styles.css
@@ -438,6 +438,17 @@ body {
     width: 30%;
     margin-right: 5%;
   }
+
+  .promo {
+    padding-top: 0;
+    padding-bottom: 50px;
+  }
+
+  .promo-img {
+    width: 380px;
+    height: 380px;
+  }
+
   .site-footer__links {
     width: 20.36%;
     margin-right: 6.18%;
@@ -463,8 +474,45 @@ body {
     padding-top: 150px;
     padding-bottom: 150px;
   }
+
+  .aksiya {
+    margin-right: 36px;
+  }
+
+  .promo-img {
+    position: static;
+  }
 }
 
+@media only screen and (max-width: 900px) {
+  .promo-inner {
+    align-items: flex-start;
+  }
+  .promo-img {
+    width: 320px;
+    height: 320px;
+  }
+}
+
+@media only screen and (max-width: 840px) {
+  .promo-inner {
+    flex-direction: column;
+  }
+
+  .aksiya {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 36px;
+  }
+
+  .promo-img {
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 22px;
+    margin-bottom: 20px;
+  }
+}
 @media only screen and (max-width: 800px) {
   .hero-img {
     width: 300px;
@@ -500,6 +548,11 @@ body {
     margin-bottom: 54px;
   }
 
+  .promo-inner {
+    margin-left: -20px;
+    margin-right: -20px;
+    border-radius: 0;
+  }
 
   .site-footer__links-parent {
     flex-wrap: wrap;
@@ -536,6 +589,11 @@ body {
 
   .feature-icon-wrapper {
     margin-bottom: 16px;
+  }
+
+  .promo-inner {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .site-footer__links {
@@ -601,6 +659,11 @@ body {
 
   .features-heading {
     font-size: 36px;
+  }
+
+  .promo-img {
+    width: 100%;
+    height: 300px;
   }
 
 
